--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^3.1",
         "filament/filament": "3.0-stable",
         "guzzlehttp/guzzle": "^7.2",
         "jantinnerezo/livewire-alert": "*",
@@ -16,6 +17,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.5",
+        "srmklive/paypal": "^3.0",
         "stripe/stripe-php": "^16.5"
     },
     "require-dev": {
