--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^3.1",
+        "doctrine/dbal": "^3.9",
         "filament/filament": "3.0-stable",
         "guzzlehttp/guzzle": "^7.2",
         "jantinnerezo/livewire-alert": "*",
