--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Continuous Integration and Deployment
 
 on:
   push:
-    branches: "main"
+    branches:
+      - main
 
 jobs:
   laravel-tests:
@@ -12,50 +13,68 @@ jobs:
       mysql:
         image: mysql:8.0
         env:
-          MYSQL_ROOT_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          MYSQL_ROOT_PASSWORD: root_password
           MYSQL_DATABASE: ${{ secrets.DB_DATABASE }}
           MYSQL_USER: ${{ secrets.DB_USER }}
           MYSQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping --password=root_password" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: --health-cmd="mysqladmin ping --host=127.0.0.1 --password=root_password" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-      - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
         with:
           php-version: "8.2"
-      - uses: actions/checkout@v3
+
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
       - name: Install Dependencies
-        run: |
-          composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+        run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
       - name: Clear Config and Cache
         run: |
           php artisan config:clear
           php artisan cache:clear
           php artisan route:clear
+
       - name: Set Directory Permissions
         run: chmod -R 777 storage bootstrap/cache
+
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+
       - name: Install npm Dependencies
-        run: |
-          npm install -g npm@latest
-          npm cache clean --force
+        run: npm install
+
       - name: Build Frontend Assets
         run: npm run build
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
           name: dist
           path: public/
+
       - name: Deploy to Server
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /
+          server-dir: /public_html/
+          local-dir: ./public/
+          exclude: |
+            **/.git*
+            **/node_modules/**
+            **/vendor/**
+            **/storage/**
+            **/tests/**
+            **/.env
+            **/.env.*
