--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
           php artisan route:clear
 
       - name: Set Directory Permissions
-        run: chmod -R 777 storage bootstrap/cache
+        run: chmod -R 755 storage bootstrap/cache
 
       - name: Install Node.js
         uses: actions/setup-node@v3
@@ -62,11 +62,11 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /public_html/
+          server-dir: public_html/
           local-dir: ./
+          dangerous-clean-slate: true
           exclude: |
             **/.git*
-            
             **/node_modules/**
             **/vendor/**
             **/storage/**
