--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Install Dependencies
         run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
+      - name: Generate Key
+        run: php artisan key:generate
+
       - name: Clear Config and Cache
         run: |
           php artisan config:clear
@@ -69,7 +72,5 @@ jobs:
             **/.git*
             **/node_modules/**
             **/vendor/**
-            **/storage/**
             **/tests/**
-            **/.env
-            **/.env.*
+         
