--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=Ggani_worldwide
+APP_ENV=production
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://gganiworldwide.com/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
